--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@ __pycache__/
 scripts/backup/
 scripts/normalize_rooms_schema_authoritative_merged.py
 scripts/normalize_rooms_schema_authoritative_patched.py
+
+#artifacts/ outputs
+/artifacts/
+/scratch/
+/patches/
+*.log
